--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@egjs/react-flicking": "^4.9.1",
     "bootstrap": "^5.2.0",
     "next": "12.2.3",
     "react": "18.2.0",
